@@ -575,7 +575,7 @@ class pts_result_file_analyzer
 			if((!$result_file->is_multi_way_comparison() && !$test_result->test_result_buffer->result_identifier_differences_only_numeric()) || $do_sort)
 			{
 				$test_result->sort_results_by_performance();
-				$test_result->test_result_buffer->buffer_values_reverse();
+				//$test_result->test_result_buffer->buffer_values_reverse();
 			}
 			$test_result->dynamically_generated = true;
 			return $test_result;
