@@ -65,6 +65,7 @@ div#main_area h3
 	color: #098BEF;
 	font-weight: 500;
 	font-size: 90%;
+	margin: 5px 0;
 }
 div#main_area h2
 {
